[NOISSUE] hard-refactor to simple structure for new FrontEnd Encryption
