# notes-service/src/main/java/com/flockinger/poppynotes/notesService/dto/CreateNote.java
@@ -2,174 +2,160 @@ package com.flockinger.poppynotes.notesService.dto;
 
 import java.util.Date;
 import java.util.Objects;
-
+import javax.validation.Valid;
+import javax.validation.constraints.NotEmpty;
 import javax.validation.constraints.NotNull;
-
+import org.springframework.validation.annotation.Validated;
 import com.fasterxml.jackson.annotation.JsonProperty;
-
 import io.swagger.annotations.ApiModelProperty;
 
 /**
  * CreateNote
  */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-05-10T08:59:41.039Z")
 
-public class CreateNote {
+public class CreateNote   {
+  @NotEmpty
+  @JsonProperty("title")
+  private String title = null;
+  
+  @NotEmpty
+  @JsonProperty("content")
+  private String content = null;
 
-	@NotNull
-	@JsonProperty("title")
-	private String title = null;
+  @NotEmpty
+  @JsonProperty("userHash")
+  private String userHash = null;
 
-	@JsonProperty("content")
-	private String content = null;
+  @NotNull
+  @JsonProperty("lastEdit")
+  private Date lastEdit = null;
 
-	@NotNull
-	@JsonProperty("userId")
-	private Long userId = null;
+  public CreateNote title(String title) {
+    this.title = title;
+    return this;
+  }
 
-	@NotNull
-	@JsonProperty("lastEdit")
-	private Date lastEdit = null;
+  /**
+   * Title of the Note.
+   * @return title
+  **/
+  @ApiModelProperty(value = "Title of the Note.")
 
-	@NotNull
-	@JsonProperty("pinned")
-	private Boolean pinned = null;
 
-	@NotNull
-	@JsonProperty("initVector")
-	private String initVector = null;
+  public String getTitle() {
+    return title;
+  }
 
-	/**
-	 * Initialization Vector (iv) used for message en/decryption
-	 * 
-	 * @return initVector
-	 **/
-	@ApiModelProperty(value = "Initialization Vector (iv) used for message en/decryption")
-	public String getInitVector() {
-		return initVector;
-	}
+  public void setTitle(String title) {
+    this.title = title;
+  }
 
-	public void setInitVector(String initVector) {
-		this.initVector = initVector;
-	}
+  public CreateNote content(String content) {
+    this.content = content;
+    return this;
+  }
 
-	public CreateNote title(String title) {
-		this.title = title;
-		return this;
-	}
+  /**
+   * Text content of the Note (the actual note).
+   * @return content
+  **/
+  @ApiModelProperty(value = "Text content of the Note (the actual note).")
 
-	/**
-	 * Title of the Note.
-	 * 
-	 * @return title
-	 **/
-	@ApiModelProperty(value = "Title of the Note.")
-	public String getTitle() {
-		return title;
-	}
 
-	public void setTitle(String title) {
-		this.title = title;
-	}
+  public String getContent() {
+    return content;
+  }
 
-	/**
-	 * Text content of the Note (the actual note).
-	 * 
-	 * @return content
-	 **/
-	@ApiModelProperty(value = "Text content of the Note (the actual note).")
-	public String getContent() {
-		return content;
-	}
+  public void setContent(String content) {
+    this.content = content;
+  }
 
-	public void setContent(String content) {
-		this.content = content;
-	}
+  public CreateNote userHash(String userHash) {
+    this.userHash = userHash;
+    return this;
+  }
 
-	/**
-	 * Unique Identifier of the user that created that note.
-	 * 
-	 * @return userId
-	 **/
-	@ApiModelProperty(value = "Unique Identifier of the user that created that note.")
-	public Long getUserId() {
-		return userId;
-	}
+  /**
+   * Unique Identifier of the user that created that note.
+   * @return userHash
+  **/
+  @ApiModelProperty(value = "Unique Identifier of the user that created that note.")
 
-	public void setUserId(Long userId) {
-		this.userId = userId;
-	}
 
-	/**
-	 * Date the user last edited the note.
-	 * 
-	 * @return lastEdit
-	 **/
-	@ApiModelProperty(value = "Date the user last edited the note.")
-	public Date getLastEdit() {
-		return lastEdit;
-	}
+  public String getUserHash() {
+    return userHash;
+  }
 
-	public void setLastEdit(Date lastEdit) {
-		this.lastEdit = lastEdit;
-	}
+  public void setUserHash(String userHash) {
+    this.userHash = userHash;
+  }
 
-	/**
-	 * Pin for important messages to be shown always on top.
-	 * 
-	 * @return pinned
-	 **/
-	@ApiModelProperty(value = "Pin for important messages to be shown always on top.")
-	public Boolean getPinned() {
-		return pinned;
-	}
+  public CreateNote lastEdit(Date lastEdit) {
+    this.lastEdit = lastEdit;
+    return this;
+  }
 
-	public void setPinned(Boolean pinned) {
-		this.pinned = pinned;
-	}
+  /**
+   * Date the user last edited the note.
+   * @return lastEdit
+  **/
+  @ApiModelProperty(value = "Date the user last edited the note.")
 
-	@Override
-	public boolean equals(java.lang.Object o) {
-		if (this == o) {
-			return true;
-		}
-		if (o == null || getClass() != o.getClass()) {
-			return false;
-		}
-		CreateNote createNote = (CreateNote) o;
-		return Objects.equals(this.title, createNote.title) && Objects.equals(this.content, createNote.content)
-				&& Objects.equals(this.userId, createNote.userId) && Objects.equals(this.lastEdit, createNote.lastEdit)
-				&& Objects.equals(this.pinned, createNote.pinned)
-				&& Objects.equals(this.initVector, createNote.initVector);
-	}
+  @Valid
 
-	@Override
-	public int hashCode() {
-		return Objects.hash(title, content, userId, lastEdit, pinned);
-	}
+  public Date getLastEdit() {
+    return lastEdit;
+  }
 
-	@Override
-	public String toString() {
-		StringBuilder sb = new StringBuilder();
-		sb.append("class CreateNote {\n");
+  public void setLastEdit(Date lastEdit) {
+    this.lastEdit = lastEdit;
+  }
 
-		sb.append("    title: ").append(toIndentedString(title)).append("\n");
-		sb.append("    content: ").append(toIndentedString(content)).append("\n");
-		sb.append("    userId: ").append(toIndentedString(userId)).append("\n");
-		sb.append("    lastEdit: ").append(toIndentedString(lastEdit)).append("\n");
-		sb.append("    pinned: ").append(toIndentedString(pinned)).append("\n");
-		sb.append("    initVector: ").append(toIndentedString(initVector)).append("\n");
-		sb.append("}");
-		return sb.toString();
-	}
 
-	/**
-	 * Convert the given object to string with each line indented by 4 spaces
-	 * (except the first line).
-	 */
-	private String toIndentedString(java.lang.Object o) {
-		if (o == null) {
-			return "null";
-		}
-		return o.toString().replace("\n", "\n    ");
-	}
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    CreateNote createNote = (CreateNote) o;
+    return Objects.equals(this.title, createNote.title) &&
+        Objects.equals(this.content, createNote.content) &&
+        Objects.equals(this.userHash, createNote.userHash) &&
+        Objects.equals(this.lastEdit, createNote.lastEdit);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(title, content, userHash, lastEdit);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class CreateNote {\n");
+    
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    content: ").append(toIndentedString(content)).append("\n");
+    sb.append("    userHash: ").append(toIndentedString(userHash)).append("\n");
+    sb.append("    lastEdit: ").append(toIndentedString(lastEdit)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
 }
+
