# notes-service/src/main/resources/swagger.yml
@@ -51,23 +51,16 @@ parameters:
     default: 10
     required: false
     type: integer
-  Archived:
-    name: show_archived
-    in: query
-    type: boolean
-    description: If true, only archived notes are returned. 
-    default: false
-    required: false
 paths:
   /api/v1/notes:
     get:
       summary: Get All Notes from user
       description: Returns all Notes in a shorter form from a user, paginated.
+      operationId: getNotes
       parameters:
         - $ref: '#/parameters/Page'
         - $ref: '#/parameters/Items'
         - $ref: '#/parameters/IdUser'
-        - $ref: '#/parameters/Archived'
       tags: 
         - Notes
       responses:
@@ -98,6 +91,7 @@ paths:
     post:
       summary: Create Note
       description: Creates new Note entry.
+      operationId: createNote
       parameters:
         - $ref: '#/parameters/NoteCreate'
       tags: 
@@ -105,6 +99,8 @@ paths:
       responses:
         201:
           description: Created Note.
+          schema:
+            $ref: '#/definitions/CompleteNote'
         400:
           description: Bad request (validation failed).
           schema:
@@ -126,6 +122,7 @@ paths:
     put:
       summary: Update Note
       description: Updated a Note entry.
+      operationId: updateNote
       parameters:
         - $ref: '#/parameters/NoteUpdate'
       tags: 
@@ -155,6 +152,7 @@ paths:
     get:
       summary: Get Note
       description: Fetches Note with defined Id.
+      operationId: findNote
       parameters:
         - $ref: '#/parameters/IdNote'
         - $ref: '#/parameters/IdUser'
@@ -186,8 +184,10 @@ paths:
     delete:
       summary: Delete Note
       description: Deletes a Note with defined Id.
+      operationId: removeNote
       parameters:
         - $ref: '#/parameters/IdNote'
+        - $ref: '#/parameters/IdUser'
       tags: 
         - Notes
       responses:
@@ -221,20 +221,13 @@ definitions:
       content:
         type: string
         description: Text content of the Note (the actual note).
-      userId:
-        type: integer
-        format: int64
+      userHash:
+        type: string
         description: Unique Identifier of the user that created that note.
       lastEdit:
         type: string
         format: date
         description: Date the user last edited the note.
-      pinned:
-        type: boolean
-        description: Pin for important messages to be shown always on top. 
-      initVector:
-        type: string
-        description: Initialization Vector (iv) used for message en/decryption
   UpdateNote:
     type: object
     properties:
@@ -247,9 +240,8 @@ definitions:
       content:
         type: string
         description: Text content of the Note (the actual note).
-      userId:
-        type: integer
-        format: int64
+      userHash:
+        type: string
         description: Unique Identifier of the user that created that note.
       lastEdit:
         type: string
@@ -258,12 +250,6 @@ definitions:
       pinned:
         type: boolean
         description: Pin for important messages to be shown always on top. 
-      archived:
-        type: boolean
-        description: Determines if notes is archived and not shown in regular listing (default false).
-      initVector:
-        type: string
-        description: Initialization Vector (iv) used for message en/decryption
   CompleteNote:
     type: object
     properties:
@@ -276,20 +262,13 @@ definitions:
       content:
         type: string
         description: Text content of the Note (the actual note).
-      userId:
-        type: integer
-        format: int64
+      userHash:
+        type: string
         description: Unique Identifier of the user that created that note.
       lastEdit:
         type: string
         format: date
         description: Date the user last edited the note.
-      archived:
-        type: boolean
-        description: Determines if notes is archived and not shown in regular listing (default false).
-      initVector:
-        type: string
-        description: Initialization Vector (iv) used for message en/decryption
   OverviewNote:
     type: object
     properties:
@@ -299,9 +278,9 @@ definitions:
       title:
         type: string
         description: Title of the Note.
-      partContent:
+      content:
         type: string
-        description: Only the first lines of the text content.
+        description: Text content of the Note (the actual note).
       lastEdit:
         type: string
         format: date
@@ -309,18 +288,9 @@ definitions:
       pinned:
         type: boolean
         description: Pin for important messages to be shown always on top.
-      archived:
-        type: boolean
-        description: Determines if notes is archived and not shown in regular listing (default false).
-      initVector:
-        type: string
-        description: Initialization Vector (iv) used for message en/decryption
   Error:
     type: object
     properties:
-      code:
-        type: integer
-        format: int32
       message:
         type: string
       fields:
